--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,3 +29,11 @@
   border-width: 0.25rem;
   border-color: rgb(0 0 0)
 }
+
+.animate-delay-100 {
+  animation-delay: 100ms;
+}
+
+.animate-delay-200 {
+  animation-delay: 200ms;
+}
