--- a/lib/playground_web/live/room_live.html.heex
+++ b/lib/playground_web/live/room_live.html.heex
@@ -1,5 +1,5 @@
 <%= if is_nil(@room.active_game) do %>
-  <.header class="w-full text-center" header_class="text-4xl font-bold">
+  <.header class="w-full text-center" header_class="text-xl md:text-4xl font-bold">
     Welcome to Room <code><%= @room_code %></code>, <%= @player_name %>!
     <:subtitle>
       Share the code <code><%= @room_code %></code>
@@ -18,8 +18,7 @@
   </div>
 
   <.list>
-    <:item :for={player <- @room.players} title={player.id}>
-      <%= player.name %>
+    <:item :for={player <- @room.players} title={player.name}>
       <%= if player.id == @room.host_id do %>
         <span class="inline-flex items-center rounded-md bg-blue-50 mx-2 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
           HOST
@@ -52,28 +51,55 @@
   </.table>
 <% end %>
 
-<%!-- <%= if not is_nil(@room.active_game) do %>
-  <.header class="w-full text-center" header_class="text-4xl font-bold">
-    <%= Playground.Games.get_name(@room.active_game.type) %>
-  </.header>
-<% end %> --%>
-
 <%= if not is_nil(@room.active_game) and @room.active_game.type == "tic-tac-toe" do %>
   <.live_component
     id={:tic_tac_toe}
-    module={PlaygroundWeb.TicTacToeComponent}
+    module={PlaygroundWeb.GamesComponents.TicTacToeComponent}
     game={@room.active_game}
     player_id={@player_id}
   />
 <% end %>
 
-<%!-- <div :if={@is_host} class="mt-16">
-  <.link
-    phx-click="back"
-    class="text-sm font-semibold leading-6 text-zinc-900 hover:text-zinc-700"
-  >
-    <.icon name="hero-arrow-left-solid" class="h-3 w-3" /> Pick another game
-  </.link>
-</div> --%>
-<%!-- <pre class="whitespace-pre-wrap"><%= inspect(@room, pretty: true) %></pre> --%>
-<%!-- <pre class="whitespace-pre-wrap"><%= inspect(@games, pretty: true) %></pre> --%>
+<%= if not is_nil(@room.active_game) and @room.active_game.type == "multi-hangman" do %>
+  <.live_component
+    id={:multi_hangman}
+    module={PlaygroundWeb.GamesComponents.MultiHangmanComponent}
+    game={@room.active_game}
+    players={@room.players}
+    player_id={@player_id}
+  />
+<% end %>
+
+<div class="absolute top-4 right-4">
+  <button phx-click="open_info_modal">
+    <.icon name="hero-information-circle-mini" class="h-5 w-5" />
+  </button>
+</div>
+
+<.modal
+  :if={@is_info_modal_open == true}
+  id="info-modal"
+  show
+  on_cancel={JS.push("close_info_modal")}
+>
+  <.header class="w-full text-center" header_class="text-xl md:text-4xl font-bold">
+    Room <code><%= @room_code %></code>
+  </.header>
+  <.list>
+    <:item :for={player <- @room.players} title={player.name}>
+      <%= if player.id == @room.host_id do %>
+        <span class="inline-flex items-center rounded-md bg-blue-50 mx-2 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
+          HOST
+        </span>
+      <% end %>
+    </:item>
+  </.list>
+  <div :if={@room.active_game != nil} class="mt-8 flex flex-col gap-4">
+    <.button phx-click="back" size={:responsive} variant={:secondary}>
+      Exit game
+    </.button>
+    <.button phx-click="again" size={:responsive}>
+      Restart game
+    </.button>
+  </div>
+</.modal>
