Improve room home page

--- a/lib/playground_web/live/home_live.html.heex
+++ b/lib/playground_web/live/home_live.html.heex
@@ -43,6 +43,7 @@
   <.live_component
     module={PlaygroundWeb.JoinRoomFormComponent}
     id={:join}
+    room={@room}
     title="Join a Room"
     action={@live_action}
     patch={~p"/"}
