--- a/lib/playground_web/components/layouts/root.html.heex
+++ b/lib/playground_web/components/layouts/root.html.heex
@@ -10,6 +10,12 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script
+      defer
+      data-domain="playground.ethanppl.com"
+      src="https://plausible.ethanppl.com/js/script.js"
+    >
+    </script>
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
