How to play instructions

--- a/lib/playground_web/live/list_games_live.html.heex
+++ b/lib/playground_web/live/list_games_live.html.heex
@@ -1,5 +1,8 @@
 <.header class="w-full text-center" header_class="text-4xl font-bold">
   All Games
+  <:subtitle>
+    Click to see how to play!
+  </:subtitle>
 </.header>
 
 <div class="mt-12 w-full grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -29,5 +32,23 @@
     </div>
   </div>
 </div>
+
+<.modal :if={@live_action == :show} id="game-modal" show on_cancel={JS.patch(~p"/games")}>
+  <.header class="w-full text-center mt-2 mb-8" header_class="text-xl md:text-2xl font-bold">
+    <%= @game.name %>
+  </.header>
+  <.live_component
+    id={:how_to_play_modal}
+    module={
+      case @game.game_id do
+        "super-hangman" -> PlaygroundWeb.GamesComponents.SuperHangmanComponent.HowToPlay
+        "super-tic-tac-toe" -> PlaygroundWeb.GamesComponents.SuperTicTacToeComponent.HowToPlay
+        "tic-tac-toe" -> PlaygroundWeb.GamesComponents.TicTacToeComponent.HowToPlay
+        _any -> PlaygroundWeb.GamesComponents.HowToPlay
+      end
+    }
+    game={@game}
+  />
+</.modal>
 
 <.back navigate={~p"/"}>Home</.back>
