--- a/lib/playground_web/live/home_live.html.heex
+++ b/lib/playground_web/live/home_live.html.heex
@@ -6,10 +6,10 @@
   <div class="border rounded text-center hover:bg-zinc-100">
     <.link patch={~p"/new"}>
       <div class="py-20">
-        <.header header_class="text-xl font-semibold">
+        <.header header_class="text-lg md:text-xl font-semibold">
           Create a Room
           <:subtitle>
-            Create a room and invite your friends to join!
+            Create a room and invite others to join!
           </:subtitle>
         </.header>
       </div>
@@ -18,10 +18,10 @@
   <div class="border rounded text-center hover:bg-zinc-100">
     <.link patch={~p"/join"}>
       <div class="py-20">
-        <.header header_class="text-xl font-semibold">
+        <.header header_class="text-lg md:text-xl font-semibold">
           Join a Room with a Code
           <:subtitle>
-            Have a code from your friend? Join their room!
+            Have a code? Join the room!
           </:subtitle>
         </.header>
       </div>
