--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,25 +8,51 @@
   background: 
       linear-gradient(to top left,
           rgba(0,0,0,0) 0%,
-          rgba(0,0,0,0) calc(50% - 0.15rem),
-          rgba(0,0,0,1) calc(50% - 0.15rem),
+          rgba(0,0,0,0) calc(50% - 0.1rem),
+          rgba(0,0,0,1) calc(50% - 0.1rem),
           rgba(0,0,0,1) 50%,
-          rgba(0,0,0,1) calc(50% + 0.15rem),
-          rgba(0,0,0,0) calc(50% + 0.15rem),
+          rgba(0,0,0,1) calc(50% + 0.1rem),
+          rgba(0,0,0,0) calc(50% + 0.1rem),
           rgba(0,0,0,0) 100%),
       linear-gradient(to top right,
           rgba(0,0,0,0) 0%,
-          rgba(0,0,0,0) calc(50% - 0.15rem),
-          rgba(0,0,0,1) calc(50% - 0.15rem),
+          rgba(0,0,0,0) calc(50% - 0.1rem),
+          rgba(0,0,0,1) calc(50% - 0.1rem),
           rgba(0,0,0,1) 50%,
-          rgba(0,0,0,1) calc(50% + 0.15rem),
-          rgba(0,0,0,0) calc(50% + 0.15rem),
+          rgba(0,0,0,1) calc(50% + 0.1rem),
+          rgba(0,0,0,0) calc(50% + 0.1rem),
+          rgba(0,0,0,0) 100%);
+}
+
+.cross-lg {
+  background: 
+      linear-gradient(to top left,
+          rgba(0,0,0,0) 0%,
+          rgba(0,0,0,0) calc(50% - 0.25rem),
+          rgba(0,0,0,1) calc(50% - 0.25rem),
+          rgba(0,0,0,1) 50%,
+          rgba(0,0,0,1) calc(50% + 0.25rem),
+          rgba(0,0,0,0) calc(50% + 0.25rem),
+          rgba(0,0,0,0) 100%),
+      linear-gradient(to top right,
+          rgba(0,0,0,0) 0%,
+          rgba(0,0,0,0) calc(50% - 0.25rem),
+          rgba(0,0,0,1) calc(50% - 0.25rem),
+          rgba(0,0,0,1) 50%,
+          rgba(0,0,0,1) calc(50% + 0.25rem),
+          rgba(0,0,0,0) calc(50% + 0.25rem),
           rgba(0,0,0,0) 100%);
 }
 
 .circle {
   border-radius: 9999px;
   border-width: 0.25rem;
+  border-color: rgb(0 0 0)
+}
+
+.circle-lg {
+  border-radius: 9999px;
+  border-width: 0.4rem;
   border-color: rgb(0 0 0)
 }
 
