Add timer to super tic tac toe

--- a/lib/playground_web/live/room_live.html.heex
+++ b/lib/playground_web/live/room_live.html.heex
@@ -91,6 +91,7 @@
     id={:super_tic_tac_toe}
     module={PlaygroundWeb.GamesComponents.SuperTicTacToeComponent}
     game={@room.active_game}
+    players={@room.players}
     player_id={@player_id}
   />
 <% end %>
