Fix super tic tac toe is draw logic + layout change

--- a/lib/playground_web/components/layouts/app.html.heex
+++ b/lib/playground_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main class="px-4 sm:px-6 lg:px-8 py-8 md:py-20">
+<main class="px-4 sm:px-6 lg:px-8 py-12">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
