--- a/lib/playground_web/live/room_live.html.heex
+++ b/lib/playground_web/live/room_live.html.heex
@@ -33,10 +33,13 @@
             phx-value-game_id={game.game_id}
             disabled={game.disabled}
           >
-            <img
-              src={"/images/games/#{game.game_id}.png"}
-              class="w-11/12 aspect-square mx-auto p-2"
-            />
+            <picture>
+              <source type="image/webp" srcset={"/images/games/#{game.game_id}.webp"} />
+              <img
+                src={"/images/games/#{game.game_id}.png"}
+                class="w-11/12 aspect-square mx-auto p-2"
+              />
+            </picture>
             <div class="flex flex-row justify-between py-2 px-2">
               <span class="font-bold"><%= game.name %></span>
               <div class="flex flex-row gap-1 items-center">
