--- a/lib/playground_web/live/room_live.html.heex
+++ b/lib/playground_web/live/room_live.html.heex
@@ -10,7 +10,7 @@
   </.header>
 
   <div class="mt-14">
-    <.players_component room={@room} />
+    <.players_component room={@room} viewer_id={@player_id} />
   </div>
 
   <p class="w-full text-center mt-14 text-sm leading-6 text-zinc-600">
@@ -133,7 +133,7 @@
       Room <code><%= @room_code %></code>
     </.header>
     <div class="mt-8">
-      <.players_component room={@room} />
+      <.players_component room={@room} viewer_id={@player_id} />
     </div>
     <div :if={@room.active_game != nil} class="mt-8 flex flex-col gap-4">
       <.button
