--- a/lib/playground_web/components/layouts/root.html.heex
+++ b/lib/playground_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="[scrollbar-gutter:stable]">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +17,29 @@
     >
     </script>
   </head>
-  <body class="bg-white antialiased">
+  <body class="bg-white antialiased min-h-screen flex flex-col justify-between">
     <%= @inner_content %>
+    <div class="flex flex-col gap-2 w-full py-8 bg-gray-100 justify-center items-center text-sm">
+      <div class="flex gap-2 font-semibold">
+        <a href="/games" class="hover:underline">
+          About
+        </a>
+        <div>·</div>
+        <a href="https://ethanppl.com" target="_blank" class="hover:underline">
+          About me <.icon name="hero-arrow-top-right-on-square" class="h-3 w-3" />
+        </a>
+        <div>·</div>
+        <a
+          href="https://github.com/ethanppl/playground/issues/new"
+          target="_blank"
+          class="hover:underline"
+        >
+          Report an issue <.icon name="hero-arrow-top-right-on-square" class="h-3 w-3" />
+        </a>
+      </div>
+      <div>
+        Copyright © <%= Date.utc_today() |> Date.year_of_era() |> elem(0) %> Ethan Pang.
+      </div>
+    </div>
   </body>
 </html>
